--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "inquirer": "^6.2.2"
   },
   "devDependencies": {
-    "@types/node": "^11.13.0"
+    "@types/node": "^11.13.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.4.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
