--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fort-creator",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "App generator for fortjs",
   "main": "./bin/app.js",
   "bin": {
     "fort-creator": "./bin/app.js"
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "buildpack": "npm run build && npm pack",
     "deploy": "NODE_ENV=production npm run build"
   },
   "repository": {
