--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "commander": "^2.20.0",
+    "fs-extra": "^7.0.1",
     "inquirer": "^6.2.2"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.5",
     "@types/node": "^11.13.0",
     "ts-loader": "^5.3.3",
     "typescript": "^3.4.2",
