--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "fort-creator": "./bin/app.js"
   },
   "dependencies": {
+    "cli-spinner": "^0.2.10",
     "commander": "^2.20.0",
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.2"
