--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/fs-extra": "^5.0.5",
     "@types/node": "^11.13.0",
     "ts-loader": "^5.3.3",
+    "tslint": "^5.17.0",
     "typescript": "^3.4.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
