--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fort-creator",
   "version": "1.1.1",
   "description": "App generator for fortjs",
-  "main": "./bin/app.js",
+  "main": "./dist/app.js",
   "bin": {
-    "fort-creator": "./bin/app.js"
+    "fort-creator": "./dist/app.js"
   },
   "dependencies": {
     "cli-spinner": "^0.2.10",
