--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fort-creator",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "App generator for fortjs",
   "main": "./dist/app.js",
   "bin": {
@@ -25,7 +25,8 @@
   "scripts": {
     "build": "webpack",
     "buildpack": "npm run deploy && npm pack",
-    "deploy": "NODE_ENV=production npm run build"
+    "deploy": "NODE_ENV=production npm run build",
+    "build:install":"npm run buildpack && sudo npm i fort-creator-1.1.2.tgz -g"
   },
   "repository": {
     "type": "git",
