--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cli-spinner": "^0.2.10",
+    "command-exists": "^1.2.8",
     "commander": "^2.20.0",
     "fs-extra": "^7.0.1",
     "inquirer": "^6.2.2"
@@ -26,7 +27,7 @@
     "build": "webpack",
     "buildpack": "npm run deploy && npm pack",
     "deploy": "NODE_ENV=production npm run build",
-    "build:install": "npm run buildpack && sudo npm i fort-creator-1.2.0.tgz -g"
+    "build:install": "npm run buildpack && sudo npm i fort-creator-1.2.1.tgz -g"
   },
   "repository": {
     "type": "git",
