--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "cli-spinner": "^0.2.10",
-    "commander": "^2.20.0",
+    "commander": "^8.3.0",
     "fs-extra": "^7.0.1",
-    "inquirer": "^6.2.2"
+    "github-directory-downloader": "^1.3.6",
+    "inquirer": "^8.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.5",
@@ -26,7 +27,7 @@
     "build": "webpack",
     "buildpack": "npm run deploy && npm pack",
     "deploy": "NODE_ENV=production npm run build",
-    "build:install": "npm run buildpack && sudo npm i fort-creator-1.2.0.tgz -g"
+    "build:install": "npm run buildpack && sudo npm i fort-creator-1.2.1.tgz -g"
   },
   "repository": {
     "type": "git",
