--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": "",
         "noImplicitAny": false,
         "noEmitOnError": true,
         "removeComments": false,
@@ -13,6 +14,17 @@
             "es2015",
             "dom"
         ],
-        "experimentalDecorators": true
-    }
+        "experimentalDecorators": true,
+        "paths": {
+            "~/*": [
+                "./*"
+            ],
+            "@/*": [
+                "./src/*"
+            ]
+        }
+    },
+    "exclude": [
+        "templates"
+    ]
 }
